<resources>
    <string name="app_name">The Maid</string>

    <string name="tile_image">tileImage</string>
    <string name="gradient_blue">gradient blue image</string>
    <string name="sign_up">Get Started</string>
    <string name="the_maid">THE MAID</string>
    <string name="image_of_a_maid">Image of a maid</string>
    <string name="back_button_to_navigate_previous_activity">Back button to navigate previous activity</string>
    <string name="language_selection_title">Select your Language</string>
    <string name="select_your_language">Please select Language of your choice</string>
    <string name="kannada">Kannada</string>
    <string name="tamil">Tamil</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="marathi">Marathi</string>
    <string name="bengali">Bengali</string>
    <string name="gujarati">Gujarati</string>
    <string name="malayalam">Malayalam</string>
    <string name="telugu">Telugu</string>

    <string name="profile_process_title">Profile Process</string>
    <string name="setup_profile">How would you like to setup your profile?</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>

    <string name="setup_profile_title">Setup Profile</string>
    <string name="verify_phone_number">Verify My Number</string>
    <string name="hire_a_maid">Hire A Maid</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="upload_aadhar_card">Upload Aadhar Card</string>
    <string name="library_access">We will need your permission to access your photo library in order to let you
    pick your aadhar card</string>
    <string name="aadhar_card_uploaded_successfully">Aadhar Card uploaded successfully</string>
    <string name="aadhar_card_uploaded_failed">Aadhar Card upload failed</string>

    <string name="phone_verification">Phone Verification</string>
    <string name="add_service_details">Add Service Details</string>
    <string name="enter_verification_code">We need to verify your account. Please enter the 6 digit verification
    code from text message.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="incorrect_otp">You have entered an incorrect OTP</string>

    <string name="work_details_title">Work Details</string>
    <string name="verify_work_details">Please enter the details of your work.
        We will verify these details before activating your profile.</string>
    <string name="resident_mobile_number">Resident Mobile Number</string>
    <string name="resident_full_name">Resident Full Name</string>
    <string name="resident_address">Resident Address</string>
    <string name="activate_my_profile">Activate My Profile</string>

    <string name="profile_created_title">Profile Created</string>
    <string name="profile_created">Great! Your profile has been created and will be activated shortly.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="my_account">My Account</string>

    <string name="contact_back_office">Please reach out to our back office team with following;</string>

    <string name="user_type_title">User Type</string>
    <string name="customer">Proceed as Customer</string>
    <string name="maid">Proceed as Maid</string>
    <string name="aadhar_card">1. Original Aadhar Card.</string>
    <string name="current_work_place">2. Current Work Place details.</string>
    <string name="phone_number_for_otp_verification">3. Mobile Phone for OTP verification.</string>

    <string name="sign_in_mobile_number">Sign In</string>

    <string name="maid_bookings_title">Bookings</string>
    <string name="bookings">BOOKINGS</string>
    <string name="earnings">EARNINGS</string>
    <string name="waiting_for_customers">Waiting for Customers</string>
    <string name="account_summary">A/C Summary</string>
    <string name="logout">Logout</string>
    <string name="zero">0</string>
    <string name="navigate">Navigate</string>
    <string name="my_ratings">My Rating</string>

    /*Maid Services Activity - Maid*/
    <string name="maid_services_title">Services</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="non_vegetarian">Non - Vegetarian</string>
    <string name="cooking">COOKING</string>
    <string name="household">HOUSEHOLD</string>
    <string name="select_services_text_maid">Please select the services that you can provide to customers</string>
    <string name="house_cleaning">House Cleaning</string>
    <string name="utensils_washing">Utensils Washing</string>
    <string name="clothes_washing">Clothes Washing</string>
    <string name="dusting">Dusting</string>
    <string name="deep_cleaning">Deep Cleaning</string>
    <string name="add_work_details">Add Work Details</string>

    /*Maid Services Activity - Customer*/
    <string name="select_services_text_customer">Please select the services that you want from maid</string>
    <string name="calculate_maid_charges">Calculate Maid Charges</string>

    /*Maid charges dialog box*/
    <string name="confirm_booking">Confirm Booking</string>
    <string name="maid_charges">Maid Charges</string>
    <string name="vegetarian_cooking">Vegetarian Cooking</string>
    <string name="non_vegetarian_cooking">Non-Vegetarian Cooking</string>
    <string name="total_charges">Total Charges</string>
    <string name="charges_may_vary_during_peak_hours">Charges may vary during peak hours</string>

    /*Maid Maps*/
    <string name="title_activity_maid_maps">Map</string>

</resources>
