<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.themaid.tmandroid.onboarding.SetupProfileManual">

    <ImageView
        android:id="@+id/tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.1"
        android:contentDescription="@string/tile_image"
        android:scaleType="fitXY"
        android:src="@drawable/concrete_tile" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0.3"
        android:contentDescription="@string/gradient_blue"
        android:scaleType="center"
        android:src="@drawable/circular_gradient_blue" />

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/back_button_to_navigate_previous_activity"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_left_white" />

        <TextView
            android:id="@+id/textSetupProfileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/setup_profile_title"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textContactBackOffice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="25dp"
        android:text="@string/contact_back_office"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textAadharCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textContactBackOffice"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/aadhar_card"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textWorkPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textAadharCard"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_work_place"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textWorkPlace"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number_for_otp_verification"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>
