<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".onboarding.common.SetupProfileAuto">

    <ImageView
        android:id="@+id/tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.1"
        android:contentDescription="@string/tile_image"
        android:scaleType="fitXY"
        android:src="@drawable/concrete_tile" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0.3"
        android:contentDescription="@string/gradient_blue"
        android:scaleType="center"
        android:src="@drawable/circular_gradient_blue" />

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/back_button_to_navigate_previous_activity"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_left_white" />

        <TextView
            android:id="@+id/textSetupProfileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/setup_profile_title"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/full_name"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFullName"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@android:color/white"
        android:inputType="textCapSentences|textNoSuggestions"
        android:textColor="@color/tmDarkBlue"
        android:textSize="22sp" />

    <Button
        android:id="@+id/buttonUploadAadhar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editFullName"
        android:layout_marginTop="10dp"
        android:background="#99000000"
        android:text="@string/upload_aadhar_card"
        android:textAllCaps="false"
        android:textColor="@color/tmLightBlue"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layoutUploadAadharCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonUploadAadhar"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <Button
            android:id="@+id/buttonGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#99000000"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textColor="@color/tmLightBlue"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#99000000"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="@color/tmLightBlue"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#99000000"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/tmLightBlue"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textAadharUploaded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonUploadAadhar"
        android:layout_margin="10dp"
        android:background="@color/tmDarkGreen"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/aadhar_card_uploaded_successfully"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textLibraryPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonProceed"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/library_access"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonProceed"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="#99000000"
        android:text="@string/verify_phone_number"
        android:textAllCaps="false"
        android:textColor="@color/tmLightBlue"
        android:textSize="20sp"
        android:visibility="invisible" />

</RelativeLayout>
