<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.themaid.tmandroid.onboarding.maid.MaidServices">

    <ImageView
        android:id="@+id/tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.1"
        android:contentDescription="@string/tile_image"
        android:scaleType="fitXY"
        android:src="@drawable/concrete_tile" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0.3"
        android:contentDescription="@string/gradient_blue"
        android:scaleType="center"
        android:src="@drawable/circular_gradient_blue" />

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/back_button_to_navigate_previous_activity"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_left_white" />

        <TextView
            android:id="@+id/textMaidServicesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/maid_services_title"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textSelectServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/select_services_text"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layoutCooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSelectServices"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textCooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cooking"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <CheckBox
                android:id="@+id/checkboxVegCooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.6"
                android:checked="true"
                android:text="@string/vegetarian"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkboxNonVegCooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.4"
                android:checked="true"
                android:text="@string/non_vegetarian"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHousehold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutCooking"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textHousehold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/household"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/layoutFirstTwoHouseholdServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <CheckBox
                android:id="@+id/checkboxHouseCleaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:checked="true"
                android:text="@string/house_cleaning"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkboxUtensilsWashing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:checked="true"
                android:text="@string/utensils_washing"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLastTwoHouseholdServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <CheckBox
                android:id="@+id/checkboxClothesWashing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:checked="true"
                android:text="@string/clothes_washing"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkboxDusting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:checked="true"
                android:text="@string/dusting"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkboxDeepCleaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutHousehold"
        android:layout_margin="10dp"
        android:checked="true"
        android:text="@string/deep_cleaning"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonAddWorkDetails"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="#99000000"
        android:text="@string/add_work_details"
        android:textAllCaps="false"
        android:textColor="@color/tmLightBlue"
        android:textSize="20sp"
        android:visibility="visible" />

</RelativeLayout>
