<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.themaid.tmandroid.onboarding.common.UserType">

    <ImageView
        android:id="@+id/tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.1"
        android:contentDescription="@string/tile_image"
        android:scaleType="fitXY"
        android:src="@drawable/concrete_tile" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0.3"
        android:contentDescription="@string/gradient_blue"
        android:scaleType="center"
        android:src="@drawable/circular_gradient_blue" />

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/back_button_to_navigate_previous_activity"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_left_white" />

        <TextView
            android:id="@+id/textUserTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/user_type_title"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonMaid"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="#99000000"
        android:text="@string/maid"
        android:textAllCaps="false"
        android:textColor="@color/tmLightBlue"
        android:textSize="20sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/buttonCustomer"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonMaid"
        android:layout_margin="20dp"
        android:background="#99000000"
        android:text="@string/customer"
        android:textAllCaps="false"
        android:textColor="@color/tmLightBlue"
        android:textSize="20sp"
        android:visibility="visible" />

</RelativeLayout>
